test/Fail/Issue4267/M.agda
module Issue4267.M where

record R : Set₂ where
  field
    f : Set₁
